--- a/.github/workflows/eval-execution-gpt-4o-mini.yml
+++ b/.github/workflows/eval-execution-gpt-4o-mini.yml
@@ -2,7 +2,7 @@ name: Eval Execution - gpt-4o-mini
 
 on:
   workflow_run:
-    workflows: ["CI Build"]
+    workflows: ["Rust Build CI"]
     types:
       - completed
 
