--- a/.github/workflows/eval-execution-grok-code-fast-1.yml
+++ b/.github/workflows/eval-execution-grok-code-fast-1.yml
@@ -2,7 +2,7 @@ name: Eval Execution - grok-code-fast-1
 
 on:
   workflow_run:
-    workflows: ["CI Build"]
+    workflows: ["Rust Build CI"]
     types:
       - completed
 
