--- a/.github/workflows/eval-execution-reusable.yml
+++ b/.github/workflows/eval-execution-reusable.yml
@@ -16,20 +16,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-      - name: Cache Cargo
+      - name: Fetch cached Rust target
         uses: actions/cache@v4
         with:
           path: |
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/*.rs') }}
       - name: Run eval
-        run: ./target/release/attotool --model ${{ inputs.full_model }} --yolo --input "Read at least 10 files in the repo and summarize your findings" > summary.txt 2>&1
+        run: ./target/release/attotool --model ${{ inputs.full_model }} --yolo --input "Read at least 10 files in the repo and summarize your findings" > summary.txt
         env:
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: eval-result-${{ inputs.short_model }}
-          path: summary.txt
+          path: |
+            summary.txt
+            history.yaml
