passing secrets to reusable workflow

--- a/.github/workflows/eval-execution-gpt-4o-mini.yml
+++ b/.github/workflows/eval-execution-gpt-4o-mini.yml
@@ -13,3 +13,5 @@ jobs:
     with:
       short_model: gpt-4o-mini
       full_model: openai/gpt-4o-mini
+    secrets:
+      OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
