--- a/.github/workflows/eval-execution-grok-code-fast-1.yml
+++ b/.github/workflows/eval-execution-grok-code-fast-1.yml
@@ -13,3 +13,5 @@ jobs:
     with:
       short_model: grok-code-fast-1
       full_model: x-ai/grok-code-fast-1
+    secrets:
+      OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
