installing zsh in execution workflow; disabling run on push for all execution workflows except grok-4-fast

--- a/.github/workflows/eval-execution-gpt-4o-mini.yml
+++ b/.github/workflows/eval-execution-gpt-4o-mini.yml
@@ -2,9 +2,10 @@ name: Eval Execution - gpt-4o-mini
 
 on:
   workflow_run:
-    workflows: ["Rust Build CI"]
-    types:
-      - completed
+    # workflows: ["Rust Build CI"]
+    # types:
+    #   - completed
+  workflow_dispatch:
 
 jobs:
   run-eval:
