--- a/.github/workflows/eval-execution-reusable.yml
+++ b/.github/workflows/eval-execution-reusable.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Install zsh
+        run: sudo apt-get update && sudo apt-get install -y zsh
       - name: Fetch cached Rust target
         uses: actions/cache@v4
         with:
