passing run-id to necessary workflows for artifact download

--- a/.github/workflows/eval-execution-gpt-4o-mini.yml
+++ b/.github/workflows/eval-execution-gpt-4o-mini.yml
@@ -1,10 +1,10 @@
 name: Eval Execution - gpt-4o-mini
 
 on:
-  workflow_run:
-    # workflows: ["Rust Build CI"]
-    # types:
-    #   - completed
+  # workflow_run:
+  #   workflows: ["Rust Build CI"]
+  #   types:
+  #     - completed
   workflow_dispatch:
 
 jobs:
