--- a/.github/workflows/eval-execution-grok-code-fast-1.yml
+++ b/.github/workflows/eval-execution-grok-code-fast-1.yml
@@ -1,10 +1,10 @@
 name: Eval Execution - grok-code-fast-1
 
 on:
-  workflow_run:
-    # workflows: ["Rust Build CI"]
-    # types:
-    #   - completed
+  # workflow_run:
+  #   workflows: ["Rust Build CI"]
+  #   types:
+  #     - completed
   workflow_dispatch:
 
 jobs:
