--- a/.github/workflows/eval-finished-task-grok-4-fast.yml
+++ b/.github/workflows/eval-finished-task-grok-4-fast.yml
@@ -12,3 +12,4 @@ jobs:
     uses: ./.github/workflows/eval-finished-task-reusable.yml
     with:
       model: grok-4-fast
+      run_id: ${{ github.event.workflow_run.id }}
