--- a/.github/workflows/eval-finished-task-reusable.yml
+++ b/.github/workflows/eval-finished-task-reusable.yml
@@ -6,6 +6,9 @@ on:
       model:
         required: true
         type: string
+      run_id:
+        required: true
+        type: string
 
 jobs:
   evaluate:
@@ -15,6 +18,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: eval-result-${{ inputs.model }}
+          run-id: ${{ inputs.run_id }}
           path: .
       - name: Evaluate
         run: |
