adding github_token to artifact downloads

--- a/.github/workflows/eval-execution-grok-code-fast-1.yml
+++ b/.github/workflows/eval-execution-grok-code-fast-1.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   run-eval:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/eval-execution-reusable.yml
     with:
       short_model: grok-code-fast-1
