--- a/.github/workflows/eval-read-8-files-grok-code-fast-1.yml
+++ b/.github/workflows/eval-read-8-files-grok-code-fast-1.yml
@@ -12,3 +12,4 @@ jobs:
     uses: ./.github/workflows/eval-read-8-files-reusable.yml
     with:
       model: grok-code-fast-1
+      run_id: ${{ github.event.workflow_run.id }}
