--- a/.github/workflows/eval-read-3-files-gpt-4o-mini.yml
+++ b/.github/workflows/eval-read-3-files-gpt-4o-mini.yml
@@ -12,3 +12,4 @@ jobs:
     uses: ./.github/workflows/eval-read-3-files-reusable.yml
     with:
       model: gpt-4o-mini
+      run_id: ${{ github.event.workflow_run.id }}
