--- a/.github/workflows/eval-execution-grok-4-fast.yml
+++ b/.github/workflows/eval-execution-grok-4-fast.yml
@@ -1,10 +1,10 @@
 name: Eval Execution - grok-4-fast
 
 on:
-  workflow_run:
-    workflows: ["Rust Build CI"]
-    types:
-      - completed
+  # workflow_run:
+  #   workflows: ["Rust Build CI"]
+  #   types:
+  #     - completed
   workflow_dispatch:
 
 
