--- a/system_prompt.yaml
+++ b/system_prompt.yaml
@@ -7,12 +7,14 @@ yaml_tool_calling_agent_identity: |-
 task_instructions: |-
   You will be given a user message which defines a task, and your job is to choose which tool would be most appropriate to use to accomplish or make progress on the task, and provide the necessary arguments for that tool. The tool call will then be executed by the user and the result returned. You will then choose another tool to continue the task.
 task_guidance: |-
-  If the task is finished, use the finish_task tool. If you need additional information, use ask_for_clarification
+  If the task is finished, use the finish_task tool.
 plan_guidance: |-
-  If the planning is finished, use the finish_planning tool. If you need additional information, use ask_for_clarification
+  If the planning is finished, use the finish_planning tool.
+ask_for_clarification: |-
+  If you need additional information, use ask_for_clarification
 current_dir: "The current working directory is {}"
-agents_md: "\n\nAGENTS.md is an open format for guiding tool-calling agents, providing project-specific instructions like build steps, code style, and conventions to help AI agents work effectively on the codebase."
-plan_mode: "\n\nPLAN MODE ENABLED: You are in read-only phase. All modifications are forbidden, including through execute_shell_command. You may only observe, analyze, and plan."
+agents_md: "AGENTS.md is an open format for guiding tool-calling agents, providing project-specific instructions like build steps, code style, and conventions to help AI agents work effectively on the codebase."
+plan_mode: "PLAN MODE ENABLED: You are in read-only phase. All modifications are forbidden, including through execute_shell_command. You may only observe, analyze, and plan."
 tools: |-
   Your available tools:
 
