--- a/.github/workflows/eval-execution-gpt-4o-mini.yml
+++ b/.github/workflows/eval-execution-gpt-4o-mini.yml
@@ -13,6 +13,6 @@ jobs:
     uses: ./.github/workflows/eval-execution-reusable.yml
     with:
       short_model: gpt-4o-mini
-      full_model: openai/gpt-4o-mini
+      full_model: google/gpt-4o-mini
     secrets:
       OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
