--- a/.github/workflows/eval-read-8-files-read-mistral-7b-instruct-yaml.yml
+++ b/.github/workflows/eval-read-8-files-read-mistral-7b-instruct-yaml.yml
@@ -1,8 +1,8 @@
-name: Eval Read 8 Files Read - grok-code-fast-1 - json
+name: Eval Read 8 Files Read - mistral-7b-instruct - yaml
 
 on:
   workflow_run:
-    workflows: ["Eval Execution Read - grok-code-fast-1 - json"]
+    workflows: ["Eval Execution Read - mistral-7b-instruct - yaml"]
     types:
       - completed
 
@@ -11,6 +11,6 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/eval-read-8-files-format-reusable.yml
     with:
-      model: grok-code-fast-1
+      model: mistral-7b-instruct
       run_id: ${{ github.event.workflow_run.id }}
-      format: json
+      format: yaml
