--- a/.github/workflows/eval-execution-fetch-url-gpt-4o-mini-json_fixed_key.yml
+++ b/.github/workflows/eval-execution-fetch-url-gpt-4o-mini-json_fixed_key.yml
@@ -1,4 +1,4 @@
-name: Eval Execution Fetch URL - gpt-4o-mini - json_fixed_key
+name: Eval Execution Fetch URL - openai/gpt-oss-20b - json_fixed_key
 
 on:
   workflow_dispatch:
@@ -7,8 +7,8 @@ jobs:
   run-eval:
     uses: ./.github/workflows/eval-execution-fetch-format-reusable.yml
     with:
-      short_model: gpt-4o-mini
-      full_model: openai/gpt-4o-mini
+      short_model: openai/gpt-oss-20b
+      full_model: openai/gpt-oss-20b
       format: json_fixed_key
     secrets:
       OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
