--- a/.github/workflows/eval-finished-task-read-gemma-3-27b-it-json.yml
+++ b/.github/workflows/eval-finished-task-read-gemma-3-27b-it-json.yml
@@ -1,8 +1,8 @@
-name: Eval Finished Task Read - gpt-4o-mini - yaml
+name: Eval Finished Task Read - gemma-3-27b-it - json
 
 on:
   workflow_run:
-    workflows: ["Eval Execution Read - gpt-4o-mini - yaml"]
+    workflows: ["Eval Execution Read - gemma-3-27b-it - json"]
     types:
       - completed
 
@@ -11,6 +11,6 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/eval-finished-task-format-reusable.yml
     with:
-      model: gpt-4o-mini
+      model: gemma-3-27b-it
       run_id: ${{ github.event.workflow_run.id }}
-      format: yaml
+      format: json
