--- a/.github/workflows/eval-finished-task-read-mistral-7b-instruct-json_fixed_key.yml
+++ b/.github/workflows/eval-finished-task-read-mistral-7b-instruct-json_fixed_key.yml
@@ -1,8 +1,8 @@
-name: Eval Finished Task Read - grok-code-fast-1 - yaml
+name: Eval Finished Task Read - mistral-7b-instruct - json_fixed_key
 
 on:
   workflow_run:
-    workflows: ["Eval Execution Read - grok-code-fast-1 - yaml"]
+    workflows: ["Eval Execution Read - mistral-7b-instruct - json_fixed_key"]
     types:
       - completed
 
@@ -11,6 +11,6 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/eval-finished-task-format-reusable.yml
     with:
-      model: grok-code-fast-1
+      model: mistral-7b-instruct
       run_id: ${{ github.event.workflow_run.id }}
-      format: yaml
+      format: json_fixed_key
