--- a/.github/workflows/eval-finished-task-read-mistral-7b-instruct-yaml.yml
+++ b/.github/workflows/eval-finished-task-read-mistral-7b-instruct-yaml.yml
@@ -1,8 +1,8 @@
-name: Eval Finished Task Read - gpt-4o-mini - json_fixed_key
+name: Eval Finished Task Read - mistral-7b-instruct - yaml
 
 on:
   workflow_run:
-    workflows: ["Eval Execution Read - gpt-4o-mini - json_fixed_key"]
+    workflows: ["Eval Execution Read - mistral-7b-instruct - yaml"]
     types:
       - completed
 
@@ -11,6 +11,6 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/eval-finished-task-format-reusable.yml
     with:
-      model: gpt-4o-mini
+      model: mistral-7b-instruct
       run_id: ${{ github.event.workflow_run.id }}
-      format: json_fixed_key
+      format: yaml
