--- a/.github/workflows/eval-read-3-files-read-mistral-7b-instruct-json_fixed_key.yml
+++ b/.github/workflows/eval-read-3-files-read-mistral-7b-instruct-json_fixed_key.yml
@@ -1,8 +1,8 @@
-name: Eval Read 3 Files Read - gpt-4o-mini - yaml
+name: Eval Read 3 Files Read - mistral-7b-instruct - json_fixed_key
 
 on:
   workflow_run:
-    workflows: ["Eval Execution Read - gpt-4o-mini - yaml"]
+    workflows: ["Eval Execution Read - mistral-7b-instruct - json_fixed_key"]
     types:
       - completed
 
@@ -11,6 +11,6 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/eval-read-3-files-format-reusable.yml
     with:
-      model: gpt-4o-mini
+      model: mistral-7b-instruct
       run_id: ${{ github.event.workflow_run.id }}
-      format: yaml
+      format: json_fixed_key
