--- a/.github/workflows/eval-read-8-files-read-gemma-3-27b-it-json.yml
+++ b/.github/workflows/eval-read-8-files-read-gemma-3-27b-it-json.yml
@@ -1,16 +1,16 @@
-name: Eval Read 3 Files Read - gpt-4o-mini - json
+name: Eval Read 8 Files Read - gemma-3-27b-it - json
 
 on:
   workflow_run:
-    workflows: ["Eval Execution Read - gpt-4o-mini - json"]
+    workflows: ["Eval Execution Read - gemma-3-27b-it - json"]
     types:
       - completed
 
 jobs:
   evaluate:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    uses: ./.github/workflows/eval-read-3-files-format-reusable.yml
+    uses: ./.github/workflows/eval-read-8-files-format-reusable.yml
     with:
-      model: gpt-4o-mini
+      model: gemma-3-27b-it
       run_id: ${{ github.event.workflow_run.id }}
       format: json
