--- a/.github/workflows/eval-read-8-files-read-gemma-3-27b-it-json_fixed_key.yml
+++ b/.github/workflows/eval-read-8-files-read-gemma-3-27b-it-json_fixed_key.yml
@@ -1,8 +1,8 @@
-name: Eval Read 8 Files Read - gpt-4o-mini - yaml
+name: Eval Read 8 Files Read - gemma-3-27b-it - json_fixed_key
 
 on:
   workflow_run:
-    workflows: ["Eval Execution Read - gpt-4o-mini - yaml"]
+    workflows: ["Eval Execution Read - gemma-3-27b-it - json_fixed_key"]
     types:
       - completed
 
@@ -11,6 +11,6 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/eval-read-8-files-format-reusable.yml
     with:
-      model: gpt-4o-mini
+      model: gemma-3-27b-it
       run_id: ${{ github.event.workflow_run.id }}
-      format: yaml
+      format: json_fixed_key
