--- a/.github/workflows/eval-read-8-files-read-mistral-7b-instruct-json.yml
+++ b/.github/workflows/eval-read-8-files-read-mistral-7b-instruct-json.yml
@@ -1,8 +1,8 @@
-name: Eval Read 8 Files Read - gpt-4o-mini - json
+name: Eval Read 8 Files Read - mistral-7b-instruct - json
 
 on:
   workflow_run:
-    workflows: ["Eval Execution Read - gpt-4o-mini - json"]
+    workflows: ["Eval Execution Read - mistral-7b-instruct - json"]
     types:
       - completed
 
@@ -11,6 +11,6 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/eval-read-8-files-format-reusable.yml
     with:
-      model: gpt-4o-mini
+      model: mistral-7b-instruct
       run_id: ${{ github.event.workflow_run.id }}
       format: json
