--- a/.github/workflows/eval-finished-task-read-gpt-oss-120b-exacto-json_fixed_key.yml
+++ b/.github/workflows/eval-finished-task-read-gpt-oss-120b-exacto-json_fixed_key.yml
@@ -1,8 +1,8 @@
-name: Eval Finished Task Read - openai-gpt-4o-mini - yaml
+name: Eval Finished Task Read - gpt-oss-120b-exacto - json_fixed_key
 
 on:
   workflow_run:
-    workflows: ["Eval Execution Read - openai-gpt-4o-mini - yaml"]
+    workflows: ["Eval Execution Read - gpt-oss-120b-exacto - json_fixed_key"]
     types:
       - completed
 
@@ -11,6 +11,6 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/eval-finished-task-format-reusable.yml
     with:
-      model: openai-gpt-4o-mini
+      model: gpt-oss-120b-exacto
       run_id: ${{ github.event.workflow_run.id }}
-      format: yaml
+      format: json_fixed_key
