--- a/.github/workflows/eval-valid-yaml-fetch-url-gpt-oss-120b-exacto-yaml.yml
+++ b/.github/workflows/eval-valid-yaml-fetch-url-gpt-oss-120b-exacto-yaml.yml
@@ -1,8 +1,8 @@
-name: Eval Valid YAML Fetch URL - openai-gpt-4o-mini - yaml
+name: Eval Valid YAML Fetch URL - gpt-oss-120b-exacto - yaml
 
 on:
   workflow_run:
-    workflows: ["Eval Execution Fetch URL - openai-gpt-4o-mini - yaml"]
+    workflows: ["Eval Execution Fetch URL - gpt-oss-120b-exacto - yaml"]
     types:
       - completed
 
@@ -11,6 +11,6 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/eval-valid-yaml-format-reusable.yml
     with:
-      model: openai-gpt-4o-mini
+      model: gpt-oss-120b-exacto
       run_id: ${{ github.event.workflow_run.id }}
       format: yaml
