--- a/.github/workflows/eval-execution-fetch-url-gpt-4o-mini-json.yml
+++ b/.github/workflows/eval-execution-fetch-url-gpt-4o-mini-json.yml
@@ -1,4 +1,4 @@
-name: Eval Execution Fetch URL - openai/gpt-oss-20b - json
+name: Eval Execution Fetch URL - openai/gpt-4o-mini - json
 
 on:
   workflow_dispatch:
@@ -7,8 +7,8 @@ jobs:
   run-eval:
     uses: ./.github/workflows/eval-execution-fetch-format-reusable.yml
     with:
-      short_model: openai/gpt-oss-20b
-      full_model: openai/gpt-oss-20b
+      short_model: openai/gpt-4o-mini
+      full_model: openai/gpt-4o-mini
       format: json
     secrets:
       OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
